@@ -1,3 +1,9 @@
+Sun Dec 31 18:43:24 2000  George Lebl <jirka@5z.com>
+
+	* panel-widget.c:  Use the new movememnt style for both switch and
+	  push move.  Instead of waiting until the boundary is crossed, the
+	  applet is sortof being held onto on the place you clicked on it.
+
 Sun Dec 31 17:41:21 2000  George Lebl <jirka@5z.com>
 
 	* panel-widget.[ch], extern.c:  minor cleanup, and use initial
